--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 name: Christopher Kodama's Website
 markdown: kramdown
 highlighter: rouge
+collections:
+  projects:
+    output: true
+    order:
+      - pdf_bullets.md
