throwing in tailwind css

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ vendor/
 bundle
 ckhordiasma.github.io.geany
 drafts/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+node_modules/
