--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.0.18"
+    "@fontsource/inter": "^5.0.18",
+    "@tailwindcss/forms": "^0.5.7"
   }
 }
